<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/darkGrey">
    
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grammiegramRed"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"/> <!-- possibly make title "Your Boards" for clarity? -->

    <!-- fragment container to hold settings fragment -->
    <FrameLayout
        android:id="@+id/board_list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>


    <!-- rv to hold list of boards -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/board_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item_recycler"
        />


    <!-- loading view -->
    <ProgressBar
        android:id="@+id/progress_dialogue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/loading_text"
        android:layout_gravity="center_horizontal"
        style="?android:attr/progressBarStyleLarge"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <!-- error views -->
    <ImageView
        android:id="@+id/error_image"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:contentDescription="@string/server_error"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_warning_black_24dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/wifi_error"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:visibility="gone"/>

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:background="@color/blue"
        android:textColor="@color/black"
        android:text="@string/retry_btn"
        android:visibility="gone"/>



</LinearLayout>